# REHA-Connect-HS-Slack

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Connector SDK.md  Dockerfile.lambda  README.md  REHA Connect.md  deploy.ps1  deploy_sentiment.ps1  docker-compose.yml  integration guide.md  local_sqs_poller.py  pyproject.toml  slack_manifest dev.json  slack_manifest.json
app/: lambda_handler.py  lambda_scheduler.py  main.py  sqs_worker.py
app/api/: router.py  schemas.py
app/api/public/: contact_router.py
app/connectors/: __init__.py  registry.py
app/connectors/common/: base.py  interaction_registry.py  registry.py
app/connectors/slack/: channel_setup_service.py  slack_channel.py  slack_renderer.py  token_service.py  utils.py
app/connectors/slack/services/: command_service.py  event_router.py  service.py  slack_ui_adapter.py
app/connectors/slack/ui/: __init__.py  modal_builder.py
app/core/: base_client.py  config.py  dependencies.py  exceptions.py  logging.py  middleware.py
app/core/security/: hubspot_signature.py  provider_signature.py  slack_signature.py  state_validator.py
app/db/: base_record.py  protocols.py  records.py  repository.py  storage_service.py  supabase_client.py
app/db/services/: base.py  idempotency_storage.py  integration_storage.py  workspace_storage.py
app/domains/ai/: async_sentiment.py  service.py
app/domains/billing/: __init__.py  router.py  tier_service.py
app/domains/common/: audit_service.py  email_service.py
app/domains/common/sdk/: context.py  handler.py  ui_adapter.py
app/domains/crm/: base.py  billing_service.py  event_router.py  integration_service.py  notification_service.py  service.py  slack_client_service.py  uninstall_service.py  user_mapping_service.py  user_mappings_router.py
app/domains/messaging/: base.py  factory.py
app/providers/hubspot/: channel.py  client.py  renderer.py
app/providers/slack/: client.py
app/routers/hubspot/: actions_router.py  ai_cards_router.py  extensions_router.py  install_router.py  oauth_router.py  settings_router.py  ui_extension_router.py  webhook_router.py  workflow_actions_router.py
app/utils/: action_ids.py  cache.py  constants.py  helpers.py  html.py  oauth.py  parsers.py  slack_helpers.py  sqs_helpers.py  transformers.py  ui.py
docs/: hubspot_slack_workflows.json
functions/sentiment/: Dockerfile  handler.py
scratch/: detect_duplicates.py  hubspot_requirements.md  old_ticket_modal_handlers.py  query_db.py  summarize_errors.py  test_dev_gating.py  test_handler.py
scripts/: 01_user_mappings.sql  02_usage_tracking_and_isolation.sql  03_security_audit_logging.sql  04_add_audit_geo.sql  05_portal_id_bigint.sql  06_interaction_anonymization.sql  07_missing_tables.sql  add_scheduled_digests.sql  add_sentiment_cache.sql  hard_delete_workspace.py  migrate_tokens.py  setup_idempotency.sql  setup_rls.sql
stripe/: billing_router.py
tests/: conftest.py  test_ai_service.py  test_ai_service_ext.py  test_async_ttl.py  test_card_builder.py  test_channel_service.py  test_connector_sdk.py  test_correlation_propagation.py  test_crypto.py  test_event_router.py  test_expansion_verified.py  test_fetch_engagements.py  test_hubspot_client.py  test_hubspot_service_ext.py  test_hubspot_webhook.py  test_integration_service.py  test_interaction_gating.py  test_lambda_handler.py  test_middleware.py  test_slack_connector.py  test_slack_signature.py  test_slash_parsers.py  test_storage_ext.py  test_storage_service.py  test_trial_logic.py  test_ui_insight.py
tests/factories/: hubspot_objects.py
tests/utils/: fake_http.py
(+39 files in other folders)
