[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reha-connect"
version = "1.0.0"
description = "REHA Connect: Scalable Multi-Connector CRM Integration Platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "REHA Apps", email = "hello@rehaapps.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "aiohttp>=3.11.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.1",
    "supabase>=2.12.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart",
    "slack-sdk>=3.40.0",
    "stripe>=14.4.0",
    "itsdangerous",
    "cryptography>=46.0.5",
    "cachetools>=6.2.6",
    "anyio>=4.0.0",
    "tenacity>=9.0.0",
    "sumy>=0.11.0",
    "nltk>=3.8.1",
    "rapidfuzz>=3.0.0",
    "langdetect>=1.0.9",
    "mangum>=0.17.0",
    "aiosmtplib>=5.1.0",
    "boto3>=1.43.14",
    "croniter>=6.2.2",
    "pytz>=2026.2",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pyright>=1.1.389",
    "respx>=0.22.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PL", "D"]
ignore = ["D203", "D213", "D205", "D400", "D401", "D415", "D417", "PLC0415", "PLR0913", "PLR2004"]

[tool.uv]
managed = true

[tool.ruff.lint.per-file-ignores]
"app/domains/crm/service.py" = ["D"]
"app/sqs_worker.py" = ["E402", "PLR0915", "PLR0912", "E501"]
"app/domains/ai/service.py" = ["E501", "PLR0912", "PLR0915"]
"app/connectors/slack/services/handlers/modal_handlers.py" = ["PLR0912", "PLR0915"]
"app/connectors/slack/slack_renderer.py" = ["PLR0912", "PLR0915"]
"app/domains/crm/notification_service.py" = ["E501"]
"app/domains/crm/hubspot/sentiment_service.py" = ["E501", "D", "PLR0912"]
"app/domains/crm/user_mapping_service.py" = ["E501"]
"app/domains/crm/ui/mixins/object_cards.py" = ["PLR0912", "PLR0915"]
"app/domains/messaging/slack/service.py" = ["PLR0912", "PLR0915"]
"app/providers/hubspot/client.py" = ["E501", "D"]
"app/providers/hubspot/channel.py" = ["D"]
"app/providers/slack/client.py" = ["D"]
"app/routers/hubspot/oauth_router.py" = ["D"]
"app/routers/hubspot/settings_router.py" = ["D"]
"app/routers/hubspot/ai_cards_router.py" = ["E501"]
"lambda_scheduler.py" = ["E501", "PLW0603"]
"app/main.py" = ["E501"]
"tests/*" = ["D"]
"scratch/*" = ["D", "F841"]
"app/connectors/slack/services/service.py" = ["E501", "D", "PLR0911", "PLR0912"]
"app/connectors/slack/ui/modal_builder.py" = ["E501"]
"app/db/services/workspace_storage.py" = ["D", "E501"]
"app/db/records.py" = ["D", "E501"]
"app/connectors/slack/services/handlers/action_handlers.py" = ["D", "E501"]
"app/connectors/slack/services/handlers/core_modal_handlers.py" = ["D", "E501", "PLR0912"]
"app/connectors/slack/services/handlers/object_handlers.py" = ["D"]
"app/api/router.py" = ["E501"]
"app/connectors/slack/routers/slack/webhook_router.py" = ["D", "E501"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.pyright]
include = ["app", "functions", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "scratch",
    ".venv"
]
reportMissingImports = true
typeCheckingMode = "basic"
